--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 
   <body>
     <a-scene physics="debug:true; friction: 0.01; restitution: 0.3">
-      <!--Camera-->
+      <!-- Cámara -->
       <a-entity position=" 0 1.6 15">
         <a-camera></a-camera>
       </a-entity>
 
-      <!--Torus-->
+      <!-- Toroide -->
       <a-entity>
         <a-torus
           position="5 5 -5"
@@ -23,12 +23,12 @@
         </a-torus>
       </a-entity>
 
-      <!--Sphere-->
+      <!-- Esfera -->
       <a-entity>
         <a-sphere position="0 5 -5" color="orange" dynamic-body> </a-sphere>
       </a-entity>
 
-      <!--Floor-->
+      <!-- Piso -->
       <a-entity>
         <a-box
           color="#EF2D5E"
